--- a/utils/multires1/config.json
+++ b/utils/multires1/config.json
@@ -21,7 +21,7 @@
             "pitch": -37.49472657538948,
             "yaw": 123.0869590722194,
             "type": "info",
-            "text": "Elm Mountain Ranch",
+            "text": "Elk Mountain Ranch",
             "URL": "https://elkmtn.com/"
         }
     ],
