--- a/utils/multires2/config.json
+++ b/utils/multires2/config.json
@@ -21,7 +21,7 @@
             "pitch": -13.314889719567828,
             "yaw": 122.10054352605464,
             "type": "info",
-            "text": "Elm Mountain Ranch",
+            "text": "Elk Mountain Ranch",
             "URL": "https://elkmtn.com/"
         }
     ],
