--- a/utils/multires4/config.json
+++ b/utils/multires4/config.json
@@ -14,7 +14,7 @@
             "pitch": -13.04630720286525,
             "yaw": 65.4114880359962,
             "type": "info",
-            "text": "Elm Mountain Ranch",
+            "text": "Elk Mountain Ranch",
             "URL": "https://elkmtn.com/"
         }
     ],
