--- a/utils/multires5/config.json
+++ b/utils/multires5/config.json
@@ -21,7 +21,7 @@
             "pitch": -2.7632440237858944,
             "yaw": 62.89220554800931,
             "type": "info",
-            "text": "Elm Mountain Dude Ranch"
+            "text": "Elk Mountain Dude Ranch"
         }
     ],
     "multiRes": {
