--- a/utils/multires3/output/config.json
+++ b/utils/multires3/output/config.json
@@ -21,7 +21,7 @@
             "pitch": -32.781255572513295,
             "yaw": 116.97551770980066,
             "type": "info",
-            "text": "Elm Mountain Ranch",
+            "text": "Elk Mountain Ranch",
             "URL": "https://elkmtn.com/"
         }
     ],
