--- a/utils/multires5/output/config.json
+++ b/utils/multires5/output/config.json
@@ -21,7 +21,7 @@
             "pitch": -2.7632440237858944,
             "yaw": 62.89220554800931,
             "type": "info",
-            "text": "Elm Mountain Ranch",
+            "text": "Elk Mountain Ranch",
             "URL": "https://elkmtn.com/"
         }
     ],
